--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="nav-menu">
         <ul>
-            <a href="#home">
+            <a href="#home" id="first-item-nav">
                 <li>Inicio</li>
             </a>
             <a href="#elenco">
