criado sessão trilha sonora

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="#">
                 <li>Curiosidades</li>
             </a>
-            <a href="#">
+            <a href="#trilha-sonora">
                 <li>Trilha Sonora</li>
             </a>
         </ul>
@@ -156,7 +156,7 @@
             <p>Confira o resumo do que ocorre em cada temporada da série.</p>
         </div>
 
-        <div class="temporadas-details animation-to-right">
+        <div class="temporadas-details animation-to-scale-to-bottom">
             <div class="card-details">
                 <details open>
                     <summary>Temporada 1</summary>
@@ -174,10 +174,23 @@
                             Hawkins do que aparenta. A temporada combina nostalgia, mistério e emoção, construindo uma
                             atmosfera envolvente que mistura amizade, coragem e o desconhecido.</p>
                     </div>
+                    <div class="button-trailer">
+                        <button>Assista ao trailer</button>
+                    </div>
+
+                    <div class="trailer-iframe">
+                        <iframe width="100%" height="100%"
+                            src="https://www.youtube.com/embed/RMmGQNNl164?si=4N-avj53xOKhh1Nu&autoplay=1"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                        </iframe>
+
+                    </div>
                 </details>
             </div>
             <div class="card-details">
-                <details>
+                <details open>
                     <summary>Temporada 2</summary>
                     <div class="content-details">
 
@@ -191,6 +204,18 @@
                             a cidade, revela mais segredos sobre o passado de alguns personagens e apresenta novos
                             rostos que se unem à história. A temporada equilibra bem ação, suspense e desenvolvimento
                             dos personagens, expandindo o universo da série de forma mais intensa e sombria.</p>
+                    </div>
+                    <div class="button-trailer">
+                        <button>Assista ao trailer</button>
+                    </div>
+
+                    <div class="trailer-iframe">
+                        <iframe width="100%" height="100%"
+                            src="https://www.youtube.com/embed/BZboFsUPuG4?si=8JZBvakbnCRHHhU5"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
                     </div>
                 </details>
             </div>
@@ -210,6 +235,18 @@
                             fortalecem, eles precisam enfrentar desafios ainda mais intensos e inesperados. A temporada
                             mistura bem humor, nostalgia dos anos 80, suspense e ação, com cenas marcantes e
                             reviravoltas que aumentam a tensão e o drama.</p>
+                    </div>
+                    <div class="button-trailer">
+                        <button>Assista ao trailer</button>
+                    </div>
+
+                    <div class="trailer-iframe">
+                        <iframe width="560" height="315"
+                            src="https://www.youtube.com/embed/cueXB927SM8?si=uPzxpP3aDPWTgR8p"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
                     </div>
                 </details>
             </div>
@@ -233,9 +270,43 @@
                             psicológico, atmosfera intensa e episódios mais longos, essa temporada prepara o terreno
                             para o grande desfecho da história.</p>
                     </div>
+                    <div class="button-trailer">
+                        <button>Assista ao trailer</button>
+                    </div>
+
+                    <div class="trailer-iframe">
+                        <iframe width="560" height="315"
+                            src="https://www.youtube.com/embed/21W-tnCgFZs?si=zXhcJ7ul0uDBNHFf"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                    </div>
                 </details>
             </div>
         </div>
+    </section>
+
+
+    <div class="gif-animated-transition-scroll">
+        <img src="img/banners/banner-wallpaper-st.gif" alt="Eleven">
+    </div>
+
+
+    <section id="trilha-sonora">
+
+        <div class="title-section">
+            <h2>Trilha Sonora</h2>
+            <p>Confira a playlist com todas as músicas tocadas durante a série.</p>
+        </div>
+
+        <div class="playslist-apple-music animation-to-scale">
+            <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="450"
+                style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;"
+                sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
+                src="https://embed.music.apple.com/br/playlist/stranger-things-1-2-3-4-season-temporada-4/pl.7012bb0dd54d492791a880c7c8683b20"></iframe>
+        </div>
+
     </section>
 
 
@@ -244,6 +315,7 @@
     <script src="web/js/animation.js"></script>
     <script src="web/js/menu.js"></script>
     <script src="web/js/slider.js"></script>
+    <script src="web/js/trailer.js"></script>
 </body>
 
 </html>
