criado sessão curiosidades e iniciado responsividade

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href="#temporadas">
                 <li>Temporadas</li>
             </a>
-            <a href="#">
+            <a href="#curiosidades">
                 <li>Curiosidades</li>
             </a>
             <a href="#trilha-sonora">
@@ -287,6 +287,85 @@
         </div>
     </section>
 
+    <div class="gif-animated-transition-scroll">
+        <img src="img/banners/banner-st.gif" alt="Eleven">
+    </div>
+
+    <section id="curiosidades">
+        <div class="title-section">
+            <h2>Curiosidades</h2>
+            <p>Confira as melhores e divertidas curiosidades da série.</p>
+        </div>
+
+        <div class="content-curiosidades animation-to-left">
+
+            <details>
+                <summary>🎬 1. A série quase teve outro nome</summary>
+                <p>Originalmente, os criadores (os irmãos Duffer) queriam chamar a série de "Montauk", baseada numa
+                    teoria da conspiração real em Montauk, Nova York. A ideia foi mudada quando decidiram criar uma
+                    cidade fictícia (Hawkins, Indiana), que oferecia mais liberdade criativa.</p>
+            </details>
+
+            <details>
+                <summary>👾 2. É cheia de referências aos anos 80</summary>
+                <p>Stranger Things é uma carta de amor aos anos 80: <br> <br>
+                        Os meninos jogam Dungeons & Dragons, que era febre na época. <br>
+                        Há referências diretas a filmes como E.T., Os Goonies, Conta Comigo e Caça-Fantasmas. <br>
+                        Até o estilo da abertura da série é inspirado nos livros de Stephen King.
+                </p>
+            </details>
+
+            <details>
+                <summary>🧇 3. O amor da Eleven por waffles foi improvisado</summary>
+                <p>A escolha de Eggo waffles como comida favorita da Eleven não estava no roteiro original. A equipe
+                    achou que seria um detalhe divertido e icônico — e virou marca registrada da personagem.
+                </p>
+            </details>
+
+            <details>
+                <summary>😱 4. Os atores realmente não sabiam tudo o que ia acontecer</summary>
+                <p>Os irmãos Duffer esconderam partes importantes do roteiro de alguns atores para manter reações mais
+                    naturais — especialmente as crianças.</p>
+            </details>
+
+            <details>
+                <summary>👩‍🔬 5. Millie Bobby Brown (Eleven) quase desistiu da carreira antes da série
+                </summary>
+                <p>Millie estava desanimada com a atuação e pensando em parar, mas Stranger Things foi sua última
+                    tentativa. Ainda bem que ela continuou!</p>
+            </details>
+
+            <details>
+                <summary>🧠 6. Gaten Matarazzo (Dustin) tem uma condição real</summary>
+                <p>Gaten tem displasia cleidocraniana, condição que afeta o crescimento dos ossos e dentes. A série
+                    incorporou isso ao personagem de forma positiva e educativa.</p>
+            </details>
+
+            <details>
+                <summary>👀 7. Os monstros têm efeitos práticos de verdade</summary>
+                <p>O Demogorgon na 1ª temporada não foi inteiramente feito em CGI. Muitos efeitos foram criados com
+                    fantasias reais e animatrônicos, à moda antiga — o que aumentou o clima retrô da série.</p>
+            </details>
+
+            <details>
+                <summary>🎤 8. A música “Running Up That Hill” voltou aos topos</summary>
+                <p>A música de Kate Bush (de 1985) voltou a bombar nas paradas musicais em 2022, quase 40 anos depois,
+                    graças à icônica cena da Max na 4ª temporada.</p>
+            </details>
+
+            <details>
+                <summary>💡 9. A série foi recusada por mais de 15 canais</summary>
+                <p>Vários estúdios recusaram Stranger Things antes de a Netflix apostar no projeto. Muitos não
+                    acreditavam que uma série estrelada por crianças e com tanta ficção funcionaria.</p>
+            </details>
+
+            <details>
+                <summary>📞 10. Os telefones da série funcionavam de verdade</summary>
+                <p>Os números usados nas cenas foram escolhidos de forma a ligar para mensagens reais ou easter eggs
+                    preparados pela produção, como vozes de personagens!</p>
+            </details>
+        </div>
+    </section>
 
     <div class="gif-animated-transition-scroll">
         <img src="img/banners/banner-wallpaper-st.gif" alt="Eleven">
